@@ -111,3 +111,5 @@ v0.9.1 (WIP):
     BUGFIX: Editor: Respect window focus while handling actions (#99)
 
     BUGFIX: Examples: Correct case of `data` directory (#97)
+    
+    BUGFIX: Canvas: Save/Restore CursorMaxPos only in Begin/End (#101)
